perf(p2p): only announce winner to relevant taxis